package com.microfin.enums;

public enum DecisionCredit {
    ACCORD_IMMEDIAT("Accord immédiat"),
    ACCORDE("Crédit accordé"),
    ETUDE_MANUELLE("Étude manuelle requise"),
    REFUSE("Crédit refusé"),
    REFUS_AUTOMATIQUE("Refus automatique");

    private final String description;

    DecisionCredit(String description) {
        this.description = description;
    }

    public String getDescription() {
        return description;
    }
}
